--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.0",
   "license": "Apache-2.0",
   "dependencies": {
+    "@pythnetwork/pyth-aptos-js": "^0.2.0",
+    "@pythnetwork/pyth-common-js": "^1.1.0",
     "@aptos-labs/wallet-adapter-ant-design": "^1.2.5",
     "@aptos-labs/wallet-adapter-react": "^1.3.2",
     "@martianwallet/aptos-wallet-adapter": "^0.0.4",
@@ -23,7 +25,8 @@
     "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.0",
+    "lightweight-charts": "^4.1.1"
   },
   "scripts": {
     "dev": "vite",
