--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,14 @@
   "version": "0.0.0",
   "license": "Apache-2.0",
   "dependencies": {
-    "@pythnetwork/pyth-aptos-js": "^0.2.0",
-    "@pythnetwork/pyth-common-js": "^1.1.0",
     "@aptos-labs/wallet-adapter-ant-design": "^1.2.5",
     "@aptos-labs/wallet-adapter-react": "^1.3.2",
     "@martianwallet/aptos-wallet-adapter": "^0.0.4",
     "@nightlylabs/aptos-wallet-adapter-plugin": "^0.2.12",
     "@openblockhq/aptos-wallet-adapter": "^0.1.5",
     "@pontem/wallet-adapter-plugin": "^0.2.0",
+    "@pythnetwork/pyth-aptos-js": "^0.2.0",
+    "@pythnetwork/pyth-common-js": "^1.1.0",
     "@rise-wallet/wallet-adapter": "^0.1.2",
     "@thalalabs/surf": "^0.0.13",
     "@tp-lab/aptos-wallet-adapter": "^1.0.1",
@@ -19,14 +19,15 @@
     "aptos": "^1.18.0",
     "autoprefixer": "^10.4.16",
     "fewcha-plugin-wallet-adapter": "^0.1.3",
+    "lightweight-charts": "^4.1.1",
     "msafe-plugin-wallet-adapter": "0.1.0",
     "petra-plugin-wallet-adapter": "^0.3.0",
     "postcss": "^8.4.31",
     "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
-    "lightweight-charts": "^4.1.1"
+    "react-icons": "^4.12.0",
+    "react-router-dom": "^6.20.0"
   },
   "scripts": {
     "dev": "vite",
