--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "postcss-loader": "^7.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.20.0"
   },
