--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@welldone-studio/aptos-wallet-adapter": "^0.1.4",
     "aptos": "^1.18.0",
     "autoprefixer": "^10.4.16",
+    "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "fewcha-plugin-wallet-adapter": "^0.1.3",
     "lightweight-charts": "^4.1.1",
