--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@pythnetwork/pyth-aptos-js": "^0.2.0",
     "@pythnetwork/pyth-common-js": "^1.1.0",
     "@rise-wallet/wallet-adapter": "^0.1.2",
+    "@syncfusion/ej2-react-buttons": "^23.2.7",
+    "@syncfusion/ej2-react-navigations": "^23.2.7",
     "@thalalabs/surf": "^0.0.13",
     "@tp-lab/aptos-wallet-adapter": "^1.0.1",
     "@trustwallet/aptos-wallet-adapter": "^0.1.6",
@@ -21,6 +23,7 @@
     "chart.js": "^4.4.1",
     "dotenv": "^16.3.1",
     "fewcha-plugin-wallet-adapter": "^0.1.3",
+    "framer-motion": "^10.16.16",
     "lightweight-charts": "^4.1.1",
     "msafe-plugin-wallet-adapter": "0.1.0",
     "petra-plugin-wallet-adapter": "^0.3.0",
@@ -30,7 +33,7 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.20.0"
+    "react-router-dom": "^6.20.1"
   },
   "scripts": {
     "dev": "vite",
