--- a/frontend/package.json
+++ b/frontend/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
     "react-icons": "^4.12.0",
+    "react-md": "^5.1.5",
     "react-router-dom": "^6.20.1"
   },
   "scripts": {
